@@ -2,16 +2,13 @@
 .Rhistory
 .RData
 .Ruserdata
-inst/doc
 inst/extdata/*
-vignettes/PreliminaryResults/*.pdf
-vignettes/PreliminaryResults/*.tex
-vignettes/PreliminaryResults/*.gz
-vignettes/PreliminaryResults/*.log
-vignettes/PreliminaryResults/*.bib
-vignettes/PreliminaryResults/*.bbl
-vignettes/PreliminaryResults/*.run.xml
-vignettes/*.csv
-vignettes/*.png
-vignettes/*.bib
-vignettes/*_cache/*
+inst/doc/*.bib
+inst/doc/*.pdf
+inst/doc/*.docx
+inst/doc/*.html
+inst/doc/*.RData
+inst/doc/*.pdf
+inst/doc/*.png
+inst/doc/*_files
+inst/doc/*_cache
