@@ -24,8 +24,10 @@ importFrom(RSAGA,rsaga.wetness.index)
 importFrom(car,Anova)
 importFrom(plyr,ddply)
 importFrom(raster,crop)
+importFrom(raster,extent)
 importFrom(raster,hillShade)
 importFrom(raster,raster)
+importFrom(raster,readAll)
 importFrom(raster,resample)
 importFrom(raster,shapefile)
 importFrom(raster,stack)
